--- a/demo/package.json
+++ b/demo/package.json
@@ -15,8 +15,12 @@
     "bootstrap": "^3.3.7",
     "express": "^4.15.3",
     "jquery": "^3.2.1",
+    "mongoose": "^4.10.7",
     "vue": "^2.2.6",
-    "vue-router": "^2.3.1"
+    "vue-resource": "^1.3.4",
+    "vue-router": "^2.3.1",
+    "vue-swiper": "^0.5.0",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
