--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "bootstrap-table": "^1.11.2",
     "jquery": "^3.2.1",
     "mongoose": "^4.10.7",
     "vue": "^2.2.6",
