--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "bootstrap-table": "^1.11.2",
+    "connect-busboy": "0.0.2",
+    "gridfs-stream": "^1.1.1",
     "jquery": "^3.2.1",
     "mongoose": "^4.10.7",
     "vue": "^2.2.6",
+    "vue-file-upload": "^0.1.3",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1",
     "vue-swiper": "^0.5.0",
