--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "test": "npm run unit"
+    "test" :"webpack.base.conf --inline"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
