--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "test" :"webpack.base.conf --inline"
+    "test": "webpack.base.conf --inline"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
@@ -17,7 +17,9 @@
     "connect-busboy": "0.0.2",
     "gridfs-stream": "^1.1.1",
     "jquery": "^3.2.1",
+    "layui": "0.0.1",
     "mongoose": "^4.10.7",
+    "react": "^15.6.1",
     "vue": "^2.2.6",
     "vue-file-upload": "^0.1.3",
     "vue-resource": "^1.3.4",
