--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "bootstrap": "^3.3.7",
     "bootstrap-table": "^1.11.2",
     "connect-busboy": "0.0.2",
+    "element-ui": "^1.4.3",
     "gridfs-stream": "^1.1.1",
     "jquery": "^3.2.1",
     "layui": "0.0.1",
     "mongoose": "^4.10.7",
+    "multer": "^1.3.0",
     "react": "^15.6.1",
     "vue": "^2.2.6",
     "vue-file-upload": "^0.1.3",
