--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "karma-spec-reporter": "0.0.30",
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
+    "mavon-editor": "^2.2.9",
     "mocha": "^3.2.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
