--- a/package.json
+++ b/package.json
@@ -65,11 +65,14 @@
     "lolex": "^1.5.2",
     "mavon-editor": "^2.2.9",
     "mocha": "^3.2.0",
+    "node-sass": "^4.6.1",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.6.0",
+    "sass": "^1.0.0-beta.3",
+    "sass-loader": "^6.0.6",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "sinon": "^2.1.0",
