--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "layui": "0.0.1",
     "mongoose": "^4.10.7",
     "multer": "^1.3.0",
+    "node-sass": "^4.9.0",
     "react": "^15.6.1",
+    "sass": "^1.0.0-beta.3",
+    "sass-loader": "^6.0.7",
+    "scss": "^0.2.4",
+    "scss-loader": "0.0.1",
+    "stylus": "^0.54.5",
     "vue": "^2.2.6",
     "vue-file-upload": "^0.1.3",
     "vue-resource": "^1.3.4",
@@ -45,7 +51,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^4.0.0",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.0.0",
@@ -67,18 +73,22 @@
     "lolex": "^1.5.2",
     "mavon-editor": "^2.2.9",
     "mocha": "^3.2.0",
-    "node-sass": "^4.6.1",
+    "node-sass": "^4.9.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.6.0",
     "sass": "^1.0.0-beta.3",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^6.0.7",
+    "scss": "^0.2.4",
+    "scss-loader": "0.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
+    "style-loader": "^0.21.0",
+    "stylus-loader": "^3.0.2",
     "url-loader": "^0.5.8",
     "vue-loader": "^11.3.4",
     "vue-style-loader": "^2.0.5",
